# sapphire-workspace

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-workspace.yml  release.yml
crates/sapphire-retrieve/: Cargo.toml  README.md
crates/sapphire-retrieve/src/: chunker.rs  config.rs  db.rs  embed.rs  lancedb_store.rs  lib.rs  retrieve_store.rs  sqlite_store.rs  vector_store.rs
crates/sapphire-sync/: Cargo.toml  README.md
crates/sapphire-sync/src/: config.rs  devices.rs  error.rs  git_sync.rs  lib.rs
crates/sapphire-workspace-cli/: Cargo.toml
crates/sapphire-workspace-cli/src/: config.rs  main.rs  mcp.rs
crates/sapphire-workspace-cli/src/commands/: delete.rs  device.rs  init.rs  mod.rs  sync.rs  upsert.rs  watch.rs
crates/sapphire-workspace-cli/src/commands/cache/: embed.rs  info.rs  sync.rs
sapphire-retrieve/: Cargo.toml  README.md
sapphire-retrieve/src/: chunker.rs  config.rs  db.rs  embed.rs  error.rs  lancedb_store.rs  lib.rs  retrieve_store.rs  sqlite_store.rs  vector_store.rs
sapphire-sync/: Cargo.toml  README.md
sapphire-sync/src/: error.rs  lib.rs
sapphire-workspace/: CHANGELOG.md  Cargo.toml  README.md
sapphire-workspace/examples/cli/: Cargo.toml
sapphire-workspace/examples/cli/src/: main.rs  mcp.rs
sapphire-workspace/examples/cli/src/commands/: delete.rs  init.rs  sync.rs  upsert.rs  watch.rs
sapphire-workspace/examples/cli/src/commands/cache/: clean.rs  embed.rs  info.rs  mod.rs  rebuild.rs  sync.rs
sapphire-workspace/src/: config.rs  context.rs  error.rs  indexer.rs  lib.rs  workspace.rs  workspace_state.rs
src/: config.rs  context.rs  error.rs  indexer.rs  lib.rs  util.rs  workspace.rs  workspace_state.rs
