[package]
name = "sapphire-retrieve"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]
fastembed-embed = ["dep:fastembed"]

[dependencies]
thiserror.workspace = true
rusqlite.workspace = true
sqlite-vec = "0.1"
serde.workspace = true
serde_json.workspace = true
ureq = { version = "3.3", features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
lancedb = { version = "0.15", optional = true }
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
futures = { version = "0.3", optional = true }
fastembed = { version = "5.13", optional = true }
