[package]
name = "sapphire-workspace"
edition.workspace = true
version = "0.2.0"
description = "Workspace management library for indexing, search, and sync of markdown documents"
license.workspace = true
repository.workspace = true
keywords = ["workspace", "markdown", "search", "sync"]
categories = ["filesystem", "database"]

[features]
default = ["lancedb-store", "fastembed-embed", "git-sync"]
sqlite-store    = ["sapphire-retrieve/sqlite-store"]
lancedb-store   = ["sapphire-retrieve/lancedb-store"]
fastembed-embed = ["sapphire-retrieve/fastembed-embed"]
git-sync        = ["sapphire-sync/git"]

[dependencies]
sapphire-retrieve = { version = "0.2.0", path = "../sapphire-retrieve", default-features = false }
sapphire-sync     = { version = "0.2.0", path = "../sapphire-sync", default-features = false }
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["full"] }
indexmap.workspace = true
walkdir = "2"
uuid = "1"
md-5 = "0.10"
